# openconnect-gui

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .mailmap  AUTHORS  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  NEWS  README  README.md  README_dev_QtCreator.md  README_dev_commandLine.md  README_known_build_issues.md  README_openconnect.md  README_release.md  README_sw_requirements.md  README_webpage.md  _config.yml  appveyor.yml  build_mingw2@msys.sh  build_mingw@win.cmd  build_msys2@win.sh  cert.cpp  cert.h  clipart.txt  common.h  cryptdata.cpp  cryptdata.h  dialogs.h  edit.ui  editdialog.cpp  editdialog.h  editdialog.ui  gtdb.cpp  gtdb.h  index.html  index.md  key.cpp  (+24 more)
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
CMake/Includes/: CMakeLists_qt-solutions.cmake.in  ProjectDependencies.cmake  ProjectExternals.cmake  ProjectExternals_openconnect.cmake  ProjectExternals_qt-solutions.cmake  ProjectExternals_spdlog.cmake  ProjectExternals_tap-windows.cmake  ProjectExternals_vpnc-scripts-win.cmake  ProjectPackage.cmake  ProjectSettings.cmake  build_timestamp_generate.cmake  build_timestamp_main.cmake  clang-format.cmake  git_revision_generate.cmake  git_revision_main.cmake  scm-generate_resource.cmake  scm-generate_source.cmake  scm-generate_version.cmake  scm.cmake
CMake/Modules/: FindOpenConnect.cmake
contrib/: .gitignore  build_mingw-openconnect-dependencies-w32@fedora24.sh  build_mingw-openconnect-dependencies-w64@fedora24.sh  build_mingw-openconnect-dependencies@fedora24.sh  build_mingw-openconnect-w32@fedora25.sh  build_mingw-openconnect-w32@fedora26.sh  build_mingw-openconnect-w32@fedora27.sh  build_mingw-openconnect-w32@fedora28.sh  build_mingw-openconnect-w32@msys2.sh  build_mingw-openconnect-w64@fedora24.sh  build_mingw-openconnect-w64@fedora25.sh  build_mingw-openconnect-w64@fedora26.sh  build_mingw-openconnect-w64@fedora27.sh  build_mingw-openconnect-w64@fedora28.sh  build_mingw-openconnect-w64@msys2.sh  build_mingw-openconnect@fedora24.sh  build_mingw@msys2.sh  build_mingw@win.cmd
docs/: dev_QtCreator.md  dev_commandLine.md  known_build_issues.md  openconnect.md  release.md  snapshots.md  sw_requirements.md  webpage.md
include/: gmp.h  openconnect.h  stoken.h
include/gnutls/: abstract.h  compat.h  crypto.h  gnutls.h  ocsp.h  openpgp.h  pkcs11.h  pkcs12.h  pkcs7.h  x509.h
include/liboath/: hotp.h  oath.h
include/libxml2/libxml/: xmlversion.h
include/nettle/: bignum.h  ecc-curve.h  nettle-stdint.h  version.h
include/p11-kit/: p11-kit.h  pkcs11x.h  remote.h  uri.h
lib/pkgconfig/: gnutls.pc  hogweed.pc  liboath.pc  libxml-2.0.pc  nettle.pc  openconnect.pc  stoken.pc  zlib.pc
nsis/: CMakeLists.txt  openconnect-gui.nsis  vpnc-script-win.js  vpnc-script.js
src/: CMakeLists.txt  FileLogger.cpp  FileLogger.h  cert.cpp  cert.h  common.h  config.cpp.in  config.h  config.h.in  cryptdata.cpp  cryptdata.h  dialogs.h  gtdb.cpp  gtdb.h  key.cpp  key.h  keypair.cpp  keypair.h  logger.cpp  logger.h  main.cpp  openconnect-gui.cpp.in  openconnect-gui.qrc  openconnect-gui.rc  openconnect-gui.rc.in  scm_version.cmake.in  server_storage.cpp  server_storage.h  storage.cpp  storage.h  timestamp.cpp.in  timestamp.h  vpninfo.cpp  vpninfo.h
src/Resources/: openconnect-gui.plist.in
src/base/: logger.cpp  logger.h
src/dialog/: MyCertMsgBox.cpp  MyCertMsgBox.h  MyInputDialog.cpp  MyInputDialog.h  MyMsgBox.cpp  MyMsgBox.h  NewProfileDialog.cpp  NewProfileDialog.h  NewProfileDialog.ui  VpnProtocol.h  VpnProtocolModel.cpp  VpnProtocolModel.h  editdialog.cpp  editdialog.h  editdialog.ui  logdialog.cpp  logdialog.h  logdialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/images/: mono_lock.icns
